--- a/assigns/assign3/assign3.html
+++ b/assigns/assign3/assign3.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2026-02-05 Thu 19:27 -->
+<!-- 2026-02-05 Thu 19:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Assignment 3</title>
@@ -50,18 +50,18 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0d4a598">1. Programming</a>
+<li><a href="#orgf4501f5">1. Programming</a>
 <ul>
-<li><a href="#orgee8b764">1.1. Lexing</a></li>
-<li><a href="#org036975e">1.2. Evaluation</a></li>
-<li><a href="#org51e781b">1.3. Unique Insertion</a></li>
+<li><a href="#orga6df07e">1.1. Lexing</a></li>
+<li><a href="#org817a339">1.2. Evaluation</a></li>
+<li><a href="#orgba7340c">1.3. Unique Insertion</a></li>
 </ul>
 </li>
-<li><a href="#org79660cb">2. Written</a>
+<li><a href="#org51a9091">2. Written</a>
 <ul>
-<li><a href="#org494f690">2.1. Typing Derivations</a></li>
-<li><a href="#orgae73262">2.2. Semantic Derivations</a></li>
-<li><a href="#org5def6b7">2.3. Recursive Let-Expressions</a></li>
+<li><a href="#orgaa75078">2.1. Typing Derivations</a></li>
+<li><a href="#orgb11fe43">2.2. Semantic Derivations</a></li>
+<li><a href="#orgde48e06">2.3. Recursive Let-Expressions</a></li>
 </ul>
 </li>
 </ul>
@@ -77,8 +77,8 @@ neat (or typed) and the final answer in your solution to each problem
 must be abundantly clear, e.g., surrounded in a box.  Also make sure
 to cite your sources per the instructions in the course manual.
 </p>
-<div id="outline-container-org0d4a598" class="outline-2">
-<h2 id="org0d4a598"><span class="section-number-2">1.</span> Programming</h2>
+<div id="outline-container-orgf4501f5" class="outline-2">
+<h2 id="orgf4501f5"><span class="section-number-2">1.</span> Programming</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 This week you'll be building (surprise) a calculator.  Or rather,
@@ -123,8 +123,8 @@ There are several functions to implement, but you should take
 assignment 2 as a staring point.
 </p>
 </div>
-<div id="outline-container-orgee8b764" class="outline-3">
-<h3 id="orgee8b764"><span class="section-number-3">1.1.</span> Lexing</h3>
+<div id="outline-container-orga6df07e" class="outline-3">
+<h3 id="orga6df07e"><span class="section-number-3">1.1.</span> Lexing</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Implement the function
@@ -152,8 +152,8 @@ well-formed statement as described above.
 </p>
 </div>
 </div>
-<div id="outline-container-org036975e" class="outline-3">
-<h3 id="org036975e"><span class="section-number-3">1.2.</span> Evaluation</h3>
+<div id="outline-container-org817a339" class="outline-3">
+<h3 id="org817a339"><span class="section-number-3">1.2.</span> Evaluation</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 Evaluation is roughly the same as in assignment 2, except that now
@@ -162,7 +162,8 @@ using association lists to represent variable bindings that we create
 during a calculator interaction.  An association list is a list of
 key-value pairs (<code>('k * 'v) list</code>).  See the <a href="https://cs3110.github.io/textbook/chapters/data/assoc_list.html">textbook chapter</a> and the
 <a href="https://nmmull.github.io/stdlib320/stdlib320/Stdlib320/List/index.html#association-lists"><code>stdlib320</code> section</a> for more information.  For the above sample
-interaction the final assocation list we should get is:
+interaction the final assocation list we should get up to reordering
+is:
 </p>
 
 <div class="org-src-container">
@@ -197,8 +198,8 @@ arithmetic expression in infix notation with variables post-lexing.
 </p>
 </div>
 </div>
-<div id="outline-container-org51e781b" class="outline-3">
-<h3 id="org51e781b"><span class="section-number-3">1.3.</span> Unique Insertion</h3>
+<div id="outline-container-orgba7340c" class="outline-3">
+<h3 id="orgba7340c"><span class="section-number-3">1.3.</span> Unique Insertion</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 After evaluating an expression, we'll need to add it to the variable
@@ -228,8 +229,8 @@ let _ = assert (List.assoc "X" (insert_uniq "X" 7 l) = 7)
 </div>
 </div>
 </div>
-<div id="outline-container-org79660cb" class="outline-2">
-<h2 id="org79660cb"><span class="section-number-2">2.</span> Written</h2>
+<div id="outline-container-org51a9091" class="outline-2">
+<h2 id="org51a9091"><span class="section-number-2">2.</span> Written</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 For all derivations, make sure that you label every rule instantiation
@@ -238,8 +239,8 @@ rules you should use for your derivations are included in the notes
 for this course under the section <b>320Caml Specification</b>.
 </p>
 </div>
-<div id="outline-container-org494f690" class="outline-3">
-<h3 id="org494f690"><span class="section-number-3">2.1.</span> Typing Derivations</h3>
+<div id="outline-container-orgaa75078" class="outline-3">
+<h3 id="orgaa75078"><span class="section-number-3">2.1.</span> Typing Derivations</h3>
 <div class="outline-text-3" id="text-2-1">
 <ol class="org-ol">
 <li><p>
@@ -266,8 +267,8 @@ derivable.  Also provide the derivation.
 </ol>
 </div>
 </div>
-<div id="outline-container-orgae73262" class="outline-3">
-<h3 id="orgae73262"><span class="section-number-3">2.2.</span> Semantic Derivations</h3>
+<div id="outline-container-orgb11fe43" class="outline-3">
+<h3 id="orgb11fe43"><span class="section-number-3">2.2.</span> Semantic Derivations</h3>
 <div class="outline-text-3" id="text-2-2">
 <ol class="org-ol">
 <li><p>
@@ -293,8 +294,8 @@ derivable.  Also provide the derivation.
 </ol>
 </div>
 </div>
-<div id="outline-container-org5def6b7" class="outline-3">
-<h3 id="org5def6b7"><span class="section-number-3">2.3.</span> Recursive Let-Expressions</h3>
+<div id="outline-container-orgde48e06" class="outline-3">
+<h3 id="orgde48e06"><span class="section-number-3">2.3.</span> Recursive Let-Expressions</h3>
 <div class="outline-text-3" id="text-2-3">
 <p>
 One rule not included in the 320Caml specification is the typing rule
